Fix db and ui instructions

--- a/docker_compose/docker-compose.yml
+++ b/docker_compose/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       - default
     ports:
       - "8080:80"
+    volumes:
+      - ./volumes/config.js:/usr/share/nginx/html/js/config.js
 
 networks:
   default:
